Fixed overflow issue and created Interface shell
- Previous settings were causing page to scroll when no content was
present.

- Created Interface page that will be used for user interactions

--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,12 @@
 
 #root {
   width: 100%;
+  max-height: 100svh;
 }
 
 body {
   margin: 0;
   display: flex;
-  min-height: 100vh;
+
   background-color: #f5fff5;
 }
